# issue_deck

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
issue_deck/: __init__.py  __main__.py  adf.py  analytics.py  annotations.py  app.py  cancellation.py  comments.py  config.py  constants.py  credentials.py  csv_import.py  datasource.py  diagnostics.py  error_presenter.py  field_values.py  filtering.py  jira_client.py  jql.py  jql_helper.py  logging_utils.py  markers.py  merge.py  models.py  normalization.py  paths.py  progress.py  query.py  redaction.py  refresh.py  schema.py  store.py  views.py
issue_deck/exporters/: __init__.py  _compat.py  analytics_export.py  context.py  csv_export.py  jsonl.py  markdown.py  options.py  pack.py  preview.py  prompts.py  render.py  transform.py
issue_deck/services/: __init__.py  capability_service.py  field_mapping_service.py  field_service.py  issue_service.py  value_source_service.py
issue_deck/tests/: conftest.py  test_adf.py  test_analytics.py  test_analytics_export.py  test_annotations.py  test_capabilities.py  test_comments.py  test_config.py  test_credentials.py  test_csv_import.py  test_datasource.py  test_diagnostics.py  test_error_presenter.py  test_export_pack.py  test_exporters.py  test_field_mapping_service.py  test_field_mapping_wiring.py  test_field_values.py  test_filtering.py  test_hardening.py  test_jira_client.py  test_jql.py  test_jql_helper.py  test_jql_workbench.py  test_logging_redaction.py  test_merge.py  test_normalization.py  test_paths.py  test_query_and_markers.py  test_redaction.py  test_refresh.py  test_schema.py  test_security_privacy.py  test_services.py  test_store.py  test_ui_about.py  test_ui_annotations.py  test_ui_command_palette.py  test_ui_connection.py  test_ui_csv_wizard.py  (+22 more)
issue_deck/tests/fixtures/: cloud_comments_adf.json  cloud_issue_adf.json  cloud_issue_rich.json  (+2 more)
issue_deck/ui/: __init__.py  about_dialog.py  command_palette.py  connection_tab.py  credentials_panel.py  csv_wizard.py  dashboard_tab.py  detail_panel.py  empty_state.py  error_dialog.py  export_dialog.py  field_mapping_dialog.py  filter_bar.py  home_page.py  jql_helper_dialog.py  main_window.py  merge_dialog.py  nav_rail.py  onboarding.py  placeholder_page.py  query_builder.py  query_tab.py  refresh_dialog.py  reports_page.py  results_table.py  search_page.py  settings_dialog.py  theme.py  value_discovery_dialog.py  workers.py
packaging/: issue-deck.spec
